merge: 完成 backend 分支的合并，包含业务逻辑代码和简单的模块测试